refactor: cleanup imports, simplify conditions, add logger statements, and finalize TransportFactory class
- Removed unused imports in `CompoundLemmaSplittingFilter` and other classes.
- Simplified null-check logic in `effectiveQueryMode` method.
- Refactored lambda expressions with explicit `final` modifiers for clarity.
- Added meaningful logger statements for MCP tool exposure across various tools.
- Migrated `TransportFactory` to a `final` class for improved immutability.
- Introduced integration tests for `semanticSearch` to validate filtering behavior.